samples/_failures_safe/1761362071_40836d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e0ec0392.c: In function ‘main’:
./samples/SAFE/__tmp_e0ec0392.c:154:5: error: expected expression at end of input
  154 |     for (int i = 0; i <
      |     ^~~
./samples/SAFE/__tmp_e0ec0392.c:154:5: error: expected declaration or statement at end of input
